[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "zutool"
version = "0.2.0"
description = "Unofficial zutool (頭痛ール: https://zutool.jp/) API Wrapper"
readme = "README.md"
keywords = [
  "zutool",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.10.5,<3",
  "requests>=2.32.3,<3",
  "rich>=13.9.4,<14",
]
urls.Repository = "https://github.com/eggplants/zutool"
scripts.zutool = "zutool.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "zutool" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<5.0"
taskipy = "^1.10.3"
types-requests = "^2.28.11.15"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<7"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.black]
line-length = 120
target-version = [
  'py39',
]

[tool.ruff]
line-length = 120

lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101",
  "D",
]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/test_*.py" = [
  "S101", # Use of assert detected
]
lint.per-file-ignores."zutool/models/*.py" = [
  "N805",    # First argument of a method should be named `self`
  "PLC2401", # Variable name contains a non-ASCII character
]
lint.mccabe.max-complexity = 18

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true
plugins = [
  "pydantic.mypy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.taskipy.tasks]
test = "pytest --cov=zutool --cov-report=term"
"test:html" = "task test --cov-report=html && open htmlcov/index.html"
"test:ci" = "task test --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
